Update favicon link to USDA site

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
 
   <!-- 使用 elitebot.dev 的 favicon -->
-  <link rel="icon" href="https://elitebot.dev/favicon.ico">
+  <link rel="icon" href="https://plants.usda.gov/">
 
   <title>Greenhouse</title>
 
