Change favicon and add meta refresh for redirection
Updated favicon link to use elitebot.dev and added meta refresh.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
 
   <!-- 使用 elitebot.dev 的 favicon -->
-  <link rel="icon" href="https://plants.usda.gov/">
+  <link rel="icon" href="https://elitebot.dev/favicon.ico">
 
   <title>Greenhouse</title>
 
@@ -14,3 +14,13 @@
 <body>
 </body>
 </html>
+<head>
+  <meta charset="utf-8">
+
+  <!-- 強制 favicon -->
+  <link rel="icon" type="image/x-icon" href="https://elitebot.dev/favicon.ico">
+  <link rel="shortcut icon" href="https://elitebot.dev/favicon.ico">
+
+  <title>Greenhouse</title>
+  <meta http-equiv="refresh" content="0; url=https://skymutations.eu/#/greenhouse">
+</head>
