--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
     <a href="https://hypixel.net/forums/skyblock-patch-notes.158/"
        target="_blank" rel="noopener">
-      Patch notes
+      Patch Notes
       <div class="hint">Press 4</div>
     </a>
   </div>
